2000-03-15  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/ntp_resolver.c (ntp_res): Authenticate the keyid.

	* ntpd/ntp_crypto.c (crypto_line): Fix definition
	(crypto_read): Ditto.

	* ntpd/ntp_config.c (getconfig): Move req_keyid generation here.

	* librsaref/Makefile.am (BUILT_SOURCES): Cleanup more nodist_ stuff.

2000-03-14  Harlan Stenn  <stenn@whimsy.udel.edu>

	* build (RSASUF): If we have rsaref2/ and are building
	--without-rsaref, note it as a build-directory suffix.

	* configure.in: 4.0.99h
	Crypto merge

	* librsaref/Makefile.am (nodist_librsaref_a_SOURCES): Added nodist_

2000-02-28  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: Lose the changequote calls and fix the quoting.
	Reported by: Akim Demaille <akim@epita.fr>

	* ntpd/ntp_request.c: Log various error conditions.

2000-02-27  Harlan Stenn  <stenn@whimsy.udel.edu>

	* configure.in: 4.0.99g

	* ntpd/ntpd.c: Only log EINTR if debug > 2.

2000-02-25  Harlan Stenn  <stenn@whimsy.udel.edu>

	* scripts/mkver.in (ConfStr): Use `-r' when configured with crypto.

	* ntpd/refclock_wwvb.c (wwvb_receive): Undo the previous chagne.

2000-02-24  Harlan Stenn  <stenn@whimsy.udel.edu>

	* ntpd/refclock_wwvb.c (wwvb_receive): LENWWVB0 can return 6 or 7
	fields.
	From: Michael Sinatra <msinatra@uclink4.berkeley.edu>
	with a cleanup from Ulrich.

	* scripts/mkver.in (ConfStr): Make RSAREF appear as part of the
	version.

2000-02-21  Sven Dietrich <sven_dietrich@trimble.com>

	* ports/winnt/include/config.h: Enable MD5 and RANDOM by default
	* ports/winnt/libntp/SetSystemTime.c: Fix warning and const declaration
	From: Carl Byington <carl@five-ten-sg.com>

2000-02-21  Harlan Stenn  <stenn@whimsy.udel.edu>

	* Makefile.am (SUBDIRS): Make librsaref right after includes so we
	can copy any needed header files over.

	* libntp/Makefile.am (INCLUDES): Also look in librsaref for des.h
	* ntpd/Makefile.am (INCLUDES): Ditto
	* util/Makefile.am (INCLUDES): Ditto
